Tweak for README.md.

--- a/reprex_bayes_gauss.Rmd
+++ b/reprex_bayes_gauss.Rmd
@@ -1,9 +1,6 @@
 ---
 title: 
-output:
-  pdf_document:
-    df_print: kable
-    highlight: tango
+output: rmarkdown::github_document
 ---
 
 Mock up a posterior predictive from two artificial Gaussian distributions.
